improved debug logger